--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Contact List</title>
 </head>
 <body>
-    <h1>Contact List Application</h1>
+    <h1>Contact List Application -  Assigment 7 by Martin Munoz </h1>
     <p>Open the console to see the output.</p>
     <script src="contactList.js"></script>
 </body>
